--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
+
+    <string name="google_maps_API">AIzaSyD0bsU7d3L0b7LGdHOuhb0-pAxDcaEEFC8</string>
+
     <string name="app_name">CelikApp2.0</string>
+    <string name="label_name"></string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">CelikApp</string>
@@ -10,4 +14,27 @@
     <string name="search_Button">Cerca</string>
     <string name="textView1">Sei un celiaco infame</string>
     <string name="dialogTextView">Applicazione creata per la laurea universitaria,Ingegneria Informatica UNIGE</string>
+    <string name="dialogTextViewAlert">Impossibile connettersi a internet.
+    Prego riprovare con una connessione stabile</string>
+    <string name="cerca_i_prodotti">CERCA I PRODOTTI</string>
+    <string name="button">Aggiungi alla Lista della Spesa</string>
+    <string name="marca">Marca</string>
+    <string name="nome">Nome</string>
+    <string name="prezzo">Prezzo</string>
+    <string name="localit">Località</string>
+
+    <string-array name="keys_ordine">
+        <item >Prezzo</item>
+        <item >Nome</item>
+        <item >Località</item>
+    </string-array>
+    <string-array name="values_ordine">
+        <item >0</item>
+        <item >1</item>
+        <item >2</item>
+    </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
