--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,12 @@
 
     <string name="google_maps_API">AIzaSyD0bsU7d3L0b7LGdHOuhb0-pAxDcaEEFC8</string>
 
-    <string name="app_name">CelikApp</string>
-    <string name="label_name">CelikApp</string>
+    <string name="app_name">CeliApp</string>
+    <string name="label_name">CeliApp</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">CelikApp</string>
-    <string name="nav_header_subtitle">Benvenuto in CelikApp</string>
+    <string name="nav_header_title">CeliApp</string>
+    <string name="nav_header_subtitle">Benvenuto in CeliApp</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="search_EditText">Cerca il prodotto</string>
@@ -46,7 +46,6 @@
         <item>3</item>
     </string-array>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_maps">Map</string>
 </resources>
